--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fractal_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://simurgh9.github.io/fractaletc/build",
+  "homepage": "https://simurgh9.github.io/fractalsetc/build",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
