--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fractal_react",
+  "name": "fractalsetc",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tashfeen.org/fractalsetc/build",
