--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "homepage": "https://tashfeen.org/fractalsetc/build",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.0"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
