changed the deployment root in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fractalsetc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tashfeen.org/fractalsetc/build",
+  "homepage": "https://tashfeen.org/fractalsetc",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
